[package]
name = "retro-z80-emulator"
version = "0.1.0"
edition = "2021"
description = "Z80 emulator for RetroShield firmware with TUI debugger"
license = "MIT"
authors = ["Alex Jokela"]
repository = "https://github.com/ajokela/retro-z80-emulator"
homepage = "https://github.com/ajokela/retro-z80-emulator"
readme = "README.md"
keywords = ["z80", "emulator", "retroshield", "tui", "debugger"]
categories = ["emulators", "command-line-utilities"]

[dependencies]
rz80 = "0.1"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"

[[bin]]
name = "retroshield"
path = "src/main.rs"

[[bin]]
name = "retroshield_tui"
path = "src/tui.rs"
