[package]
name = "retro-z80-emulator"
version = "0.1.3"
edition = "2021"
description = "Z80 emulator for RetroShield firmware with TUI debugger"
license = "MIT"
authors = ["Alex Jokela"]
repository = "https://github.com/ajokela/retro-z80-emulator"
homepage = "https://github.com/ajokela/retro-z80-emulator"
readme = "README.md"
keywords = ["z80", "emulator", "retroshield", "tui", "debugger"]
categories = ["emulators", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/wasm/lib.rs"

[dependencies]
rz80 = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "retroshield"
path = "src/main.rs"

[[bin]]
name = "retroshield_tui"
path = "src/tui.rs"
